memcached/tests/set_encoding_key.out
Fatal error: Uncaught Error: Call to a member function setEncodingKey() on null in /Users/takuya/example-app/memcached/tests/set_encoding_key.php:6
Stack trace:
#0 {main}
  thrown in /Users/takuya/example-app/memcached/tests/set_encoding_key.php on line 6